# qwen3guard-test

./: .dockerignore  .gitignore  CPU_GEN_REPORT.md  Dockerfile.aarch64  README.md  REPORT.md  REPORT_GEN.md  REPORT_STREAM.md  debug_stream.sh  debug_stream_direct_all.sh  debug_stream_direct_lengths.sh  plan.md  pyproject.toml  run.sh  run_all.sh  run_optim_ladder_stream.sh
docs/: CPU_GEN_REPORT.md  REPORT.md  REPORT_STREAM.md
docs/scripts/: make_fig1.py  make_fig1_stream.py  make_fig2.py  make_fig2_stream.py
kernels/: build_probe.py  run_kernel_cpu.sh  summarize_kernel.py
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: main.rs
scripts/: accuracy_check.py  analyze_cpu_util.py  correctness_test.py  download.py  dump_oracle_logits.py  dump_rust_inputs.py  export_gen_ctranslate2.py  export_gen_gguf.py  export_gen_mnn.py  export_gen_onnx.py  export_gen_onnx_genai.py  export_gen_openvino.py  export_stream_onnx.py  lib.sh  make_fig1.py  make_fig1_stream.py  make_fig2.py  make_fig2_stream.py  patch_llamacpp_aarch64.py  probe_llamacpp.py  run_all.sh  run_cpu.sh  run_gen_cpu.sh  run_optim_ladder_gen.sh  setup_vllm_venv.sh  summarize_cpu.py  verify_correctness.sh
src/: bench_common.py  bench_gen_cpu.py  bench_gen_onnx.py  bench_gen_pytorch.py  bench_stream_chunked.py  bench_stream_direct.py  bench_stream_direct_heads.py  bench_stream_direct_length_sweep.py  bench_stream_pytorch.py  contract.py  gen_backends.py  gen_common.py  profile_stream.py  verify_lm_head.py
src/backends/: __init__.py  base.py  ctranslate2.py  llamacpp.py  mnn.py  onnx.py  pytorch.py  vllm_cpu.py
src/backends/rust/src/: main.rs
src/exporters/: __init__.py  ctranslate2.py  gguf.py  mnn.py  onnx.py
