[project]
name = "qwen3guard-test"
version = "0.1.0"
description = "Qwen3Guard latency benchmarks — Gen + Stream, batch=1, GPU (CUDA) and CPU (PyTorch / ONNX Runtime / llama.cpp / CTranslate2 / MNN-LLM / vLLM-CPU / rust-candle)."
requires-python = ">=3.11"
# torch: GPU target is Linux + CUDA. torch comes from the default PyPI channel
# (cu124 wheel for 2.5.x / 2.6.x). Upper-bounded below 2.7 to stay on cu124
# wheels, which work with NVIDIA drivers reporting CUDA 12.4+. torch 2.7+ ships
# cu126, 2.8+ ships cu128 — both need newer drivers.
#
# onnxruntime: the plain CPU wheel, every platform. The CPU benchmark
# (bench_gen_cpu.py) and the ONNX quantizers need an onnxruntime that loads
# without CUDA. onnxruntime-gpu's native extension is linked against the CUDA
# runtime; on a box without a matching CUDA install it fails to import, leaving
# `import onnxruntime` half-initialized — no SessionOptions, no quantization
# submodule. The CPU execution provider is identical in both wheels, so the
# plain wheel is the correct dependency here. The parked GPU ONNX benchmark
# (src/bench_gen_onnx.py, not wired into any run script) falls back to the CPU
# provider; benchmarking ONNX on CUDA needs a manual `uv pip install
# onnxruntime-gpu` swap.
#
# CPU runtimes: llama-cpp-python is the GGUF runtime; ctranslate2 is the
# generation-graph runtime.
dependencies = [
    "torch>=2.5,<2.7",
    # Upper-bound transformers below 4.55: that release added a Mistral-detection
    # probe (is_base_mistral -> huggingface_hub.model_info) inside
    # AutoTokenizer.from_pretrained that hits the Hub on every call. It ignores
    # HF_HUB_OFFLINE / TRANSFORMERS_OFFLINE / local_files_only and times out on
    # hosts without HF reachability (e.g. CN regions using ModelScope mirrors).
    "transformers>=4.51,<4.55",
    "datasets>=2.18",
    "huggingface-hub>=0.24",
    "numpy",
    "onnx>=1.16",
    "onnx-ir>=0.1",  # required by onnxruntime's 4-bit (MatMulNBits) quantizer
    "onnxruntime>=1.18",
    "optimum>=1.22",
    "optimum-onnx>=0.1",
    "llama-cpp-python>=0.3",
    "ctranslate2>=4.7",
    "accelerate>=0.30",
    "sentencepiece>=0.2",
    "MNN>=3.5; sys_platform == 'linux' and platform_machine == 'aarch64'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
# Build llama-cpp-python from source so llama.cpp/ggml compiles with
# -march=native (GGML_NATIVE defaults on for a source build). The prebuilt
# wheel is generic — no AVX2 / ARM dot-product — and benchmarks 5-7x slow.
no-binary-package = ["llama-cpp-python"]
