[package]
name = "qwen3guard-bench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "qwen3guard-bench"
path = "src/main.rs"

[dependencies]
candle-core = "0.10"
candle-nn = "0.10"
candle-transformers = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[profile.release]
lto = "fat"
codegen-units = 1
